Update clientarguments